Version 2.14.0
- add/edit sentence metadata (senti_id, newdoc, newpar, transliteration, translations

Version 2.13.1
- adding grammar for replacements (and changed format for search and replace)
- correction with subclass issue

Version 2.13.0
- adding a complex search mode (syntax as in mass editing) and search-and-replace

Version 2.12.4
- mass-editing: allow brackets in feature names like Number[psor]=...
                delete features if value is empty

Version 2.12.3
- parser client configuration: accept definition of headers

Version 2.12.2
- Lemma: and Form: can have filenames as argument

Version 2.12.1
- added Misc:... to search and replace tool

Version 2.12.0
- Lexer/Grammar based search and replace
- check for missung root nodes, cycles and invalid head ID's and list errors when starting server
- new tests

Version 2.11.2
- help page updated, '_' key deletes features of active word

Version 2.11.1
- shortcut display (key '?') corrected

Version 2.11.0
- added subtree search (in ConLL-U or sd-parse format)
- importing subtrees of a given word
- tests

Version 2.10.3
- sort features case insensitive in all cases (even when duplicating a token)

Version 2.10.2
- bug in maven tests corrected (using --saveAfter 1 in tests to have output file written immediately)

Version 2.10.1
- shortcuts can have any length, shortcuts to set Feature=Value pairs
- new tests

Version 2.10.0
- new default for saving: without the option --saveAfter the conllu file is saved whenever a new sentence is chosen (next, prec, ...)
  the old behaviour (save every modification immediately) can be achieved using the option --saveAfter 1
- shortcuts can be defined for two keys
- "mod compose startid length [form]" optional form of the new MTW

Version 2.9.1
- correction: replace "\n" in MISC:SpacesAfter= by space in "# text = " line

Version 2.9.0
- options --features and --deprels can read official specifications for valid features and deprels