@@ -3,7 +3,8 @@
 * shortcuts for features (add or modify if present)
 * API: modify more than a thing at a time
 
-
+* delete newdoc/newpar or put an empty newdoc/newpar (without id = )
+* TODO button to create sentence translit from MISC:Translist
 
 
 
