@@ -806,11 +806,11 @@
                         <table id="metadataedittable">
 
 
-                            <tr><td>newdoc</td>     <td><div class="ui-widget"><input type="text" id="cnewdoc"  size="60" value=""></div></td></tr>
-                            <tr><td>newpar</td>     <td><div class="ui-widget"><input type="text" id="cnewpar"  size="60" value=""></div></td></tr>
-                            <tr><td>sent_id</td>    <td><div class="ui-widget"><input type="text" id="csent_id" size="60" value=""></div></td></tr>
-                            <tr><td>translit</td>   <td><div class="ui-widget"><input type="text" id="ctranslit"  size="60" value=""></div></td>
-                                <td><button type="button" id="inittranslist" class="mybutton">init</button></td>
+                            <tr><td>newdoc</td>     <td><div class="ui-widget"><input type="text" id="cnewdoc"  size="61" value=""></div></td></tr>
+                            <tr><td>newpar</td>     <td><div class="ui-widget"><input type="text" id="cnewpar"  size="61" value=""></div></td></tr>
+                            <tr><td>sent_id</td>    <td><div class="ui-widget"><input type="text" id="csent_id" size="61" value=""></div></td></tr>
+                            <tr><td>translit</td>   <td><div class="ui-widget"><input type="text" id="ctranslit"  size="61" value=""></div></td>
+                                <td><button type="button" id="inittranslit" class="mybutton">init</button></td>
                             </tr>
                             <tr><td>translations</td> <td><div class="ui-widget">
                                         <!--input type="text" id="cfeats" size="50" value="" -->
